tests/NormalTests/paczka2/big_fuzzy/55851916.err
Error in line 1: 8V1l S769 16,6
Error in line 7: 8V1l A135 24,8
Error in line 15: 8V1l A766 53,4
Error in line 27: Jxugz A135 56,5
Error in line 32: 6MMTV A135 38,3
Error in line 39: xJ0IOQ2b S769 13,4
Error in line 35: 6MMTV A766 23,7
Error in line 47: 8V1l A135 82,0
Error in line 50: 8V1l A766 39,4
Error in line 31: rGwm8f7u S769 64,6
Error in line 52: 6MMTV S769 12,9
Error in line 38: Jxugz A766 16,9
Error in line 78: xJ0IOQ2b S769 63,7
Error in line 79: xJ0IOQ2b A135 60,6
Error in line 83: rGwm8f7u A135 12,0
Error in line 86: 8V1l A135 32,3
Error in line 87: 8V1l A766 40,1
Error in line 88: 8V1l S769 48,0
Error in line 93: v8hQxIUDGKf A766 16,3
Error in line 97: xJ0IOQ2b A766 81,7
Error in line 106: v8hQxIUDGKf S769 43,3
Error in line 111: v8hQxIUDGKf A135 5,9
Error in line 114: v8hQxIUDGKf S769 31,1
Error in line 126: Jxugz S769 18,7
Error in line 128: Jxugz A766 42,1
Error in line 129: Jxugz S769 32,8
Error in line 132: Jxugz A766 73,7
Error in line 113: xJ0IOQ2b S769 30,9
Error in line 136: Jxugz A135 34,27
Error in line 117: v8hQxIUDGKf A135 15,8
Error in line 133: rGwm8f7u A766 5,7
Error in line 131: 8V1l S769 74,3
Error in line 144: 8V1l A13T 6,1
Error in line 151: xJ0IOQ2b A135 96,8
Error in line 142: 8V1l A135 2,6
Error in line 165: xJ0IOQ2b A135 68,1
Error in line 164: 8V1l A766 12,2
Error in line 160: v8hQxIUDGKf S769 161,1
Error in line 171: 8V1l S769 2,2
Error in line 166: xJ0IOQ2b S769 13,6
Error in line 179: 6MMTV A135 -1,7
Error in line 156: Jxugz A135 67,7
Error in line 162: 6MMTV A135 8,5
Error in line 188: Jxugz A766 31,3
Error in line 175: 8V1l A135 62,3
Error in line 174: v8hQxIUDGKf A135 49,0
Error in line 214: v8hQxIUDGKf A766 57,3
Error in line 200: rGwm8f7u A135 202,2
Error in line 211: 6MMTV S769 348,0
Error in line 225: 6MMTV A135 9,3
Error in line 221: A766 S769 13,5
Error in line 230: xJ0IOQ2b S769 93,9
Error in line 240: A766 S769 17,1
Error in line 241: A766 A135 79,2
Error in line 243: A766 A766 53,8
Error in line 237: 8V1l S769 16,1
Error in line 247: 8V1l A766 0,8
